--- a/build.gradle
+++ b/build.gradle
@@ -79,5 +79,8 @@ project(":core") {
         api "io.socket:socket.io-client:2.0.0"
         compileOnly   "org.projectlombok:lombok:1.18.20"
         annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+        implementation "com.google.dagger:dagger:2.35.1"
+        annotationProcessor "com.google.dagger:dagger-compiler:2.35.1"
     }
 }
